[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python-concurrency-and-parallelism"
version = "0.1.0"
description = ""
authors = ["Josh Karpel <josh.karpel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4"
pygments = "^2.17.2"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3"
watchfiles = ">=0.19"
mypy = ">=1"

[tool.black]
line-length = 120
include = "\\.pyi?$"

[tool.pytest.ini_options]
addopts = ["--strict-markers"]
testpaths = ["tests", "reprisal", "docs"]

markers = ["slow"]

asyncio_mode = "auto"

[tool.mypy]
pretty = true
show_error_codes = true

files = ["."]

check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
disallow_any_generics = true

warn_unused_configs = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
warn_redundant_casts = true

ignore_missing_imports = true

[tool.ruff]
line-length = 120

select = [
    "I",   # https://beta.ruff.rs/docs/rules/#isort-i
    "F",   # https://beta.ruff.rs/docs/rules/#pyflakes-f
    "E",   # https://beta.ruff.rs/docs/rules/#error-e
    "W",   # https://beta.ruff.rs/docs/rules/#warning-w
    "T20", # https://beta.ruff.rs/docs/rules/#flake8-print-t20
    "PIE", # https://beta.ruff.rs/docs/rules/#flake8-pie-pie
    "PLC", # https://beta.ruff.rs/docs/rules/#convention-plc
    "PLE", # https://beta.ruff.rs/docs/rules/#error-ple
    "PLW", # https://beta.ruff.rs/docs/rules/#warning-plw
    "PTH", # https://beta.ruff.rs/docs/rules/#flake8-use-pathlib-pth
    "PGH", # https://beta.ruff.rs/docs/rules/#pygrep-hooks-pgh
    "RUF", # https://beta.ruff.rs/docs/rules/#ruff-specific-rules-ruf
]

ignore = [
    "E501",  # line length exceeds limit
    "T201",  # print
    "T203",  # pprint
    "F403",  # star imports, used for utilities
    "F405",  # star imports, used for utilities
]
